--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#668CFF</color>
+    <color name="colorPrimaryVariant">#0E33FF</color>
+    <color name="colorOnPrimary">#F8FAFD</color>
+    <color name="colorSecondary">#4A73FC</color>
+    <color name="colorOnSecondary">#A1ADCE</color>
+
 </resources>
