--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -5,9 +5,9 @@
         android:icon="@drawable/ic_today"
         android:title="@string/today"/>
     <item
-        android:id="@+id/nextWeatherFragment"
+        android:id="@+id/nextWeatherListFragment"
         android:icon="@drawable/ic_week"
-        android:title="@string/weekly"/>
+        android:title="@string/next_days"/>
     <item
         android:id="@+id/settingsFragment"
         android:icon="@drawable/ic_settings"
