adding the current weather user interface

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#474a51</color>
 
     <color name="colorPrimary">#668CFF</color>
     <color name="colorPrimaryVariant">#0E33FF</color>
