--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             app:titleTextColor="@color/black"
+            app:subtitleTextColor="@color/gray"
             android:theme="@style/ToolbarTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
