--- a/app/src/main/res/layout/current_weather_fragment.xml
+++ b/app/src/main/res/layout/current_weather_fragment.xml
@@ -65,7 +65,7 @@
             android:id="@+id/imageView_condition_icon"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:src="@drawable/partly_cloudy"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
             android:id="@+id/textView_condition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="-8dp"
             android:text="Patchy Rain Possible"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -87,16 +87,29 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView_condition_icon" />
 
         <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Sunday, 02 Oct"
+            android:textColor="@color/colorOnSecondary"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView_condition" />
+
+        <TextView
             android:id="@+id/textView_temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="25°"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
             android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_condition" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
         <TextView
