Improve code readability and adjust UI

--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/nextWeatherDetailsFragment"
         android:icon="@drawable/ic_week"
-        android:title="@string/next_days"/>
+        android:title="@string/app_name"/>
 
     <item
         android:id="@+id/forecastHistoryFragment"
