--- a/app/src/main/res/layout/next_weather_item.xml
+++ b/app/src/main/res/layout/next_weather_item.xml
@@ -24,8 +24,9 @@
                 android:id="@+id/condition_icon"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:src="@drawable/partly_cloudy"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,15 +40,15 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/temperature_tv"
-                app:layout_constraintStart_toEndOf="@+id/condition_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/temperature_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="16dp"
                 android:text="30°"
                 android:textColor="@color/white"
                 android:textStyle="bold"
